gradle version bumps, set java version to 17 and preview for gradle tasks