@@ -3,8 +3,13 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
+group 'cyder'
+version '1.0'
 
 repositories {
     mavenCentral()
@@ -24,12 +29,16 @@ allprojects {
     }
 }
 
+tasks.withType(JavaCompile) {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
 dependencies {
     implementation 'junit:junit:4.13.2'
     implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation 'org.jsoup:jsoup:1.14.3'
+    implementation 'org.jsoup:jsoup:1.15.2'
     implementation group: 'javazoom', name: 'jlayer', version: '1.0.1'
     implementation group: 'com.fathzer', name: 'javaluator', version: '3.0.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
